--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         run: choco upgrade chocolatey
 
       - name: Install .NET Framework 4.5.2
-        run: choco install netfx-4.5.2 --no-progress --yes
+        run: choco install dotnet4.5.2 --yes
 
       - name: Build x86 Release
         run: msbuild NegativeScreen.sln /p:Configuration=Release /p:Platform=x86
