--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Update Chocolatey
         run: choco upgrade chocolatey
 
-      - name: Install .NET Framework 4.5.2
-        run: choco install netfx-4.5.2 --no-progress --yes
+      - name: Install .NET Framework 4.8.1
+        run: choco install dotnetfx --version=4.8.1.0-rtw --no-progress --yes
 
       - name: Build x86 Release
         run: msbuild NegativeScreen.sln /p:Configuration=Release /p:Platform=x86
