--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,17 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
 
-      - name: Update Chocolatey
-        run: choco upgrade chocolatey
-
-      - name: Install .NET Framework 4.5.2
-        run: choco install netfx-4.5.2 --no-progress --yes
+      - name: Restore
+        run: dotnet restore NegativeScreen/NegativeScreen.csproj
 
       - name: Build x86 Release
-        run: msbuild NegativeScreen.sln /p:Configuration=Release /p:Platform=x86
+        run: dotnet build NegativeScreen/NegativeScreen.csproj -c Release -p:Platform=x86
 
       - name: Build x64 Release
-        run: msbuild NegativeScreen.sln /p:Configuration=Release /p:Platform=x64
+        run: dotnet build NegativeScreen/NegativeScreen.csproj -c Release -p:Platform=x64
