--- a/NegativeScreen/NegativeScreen.csproj
+++ b/NegativeScreen/NegativeScreen.csproj
@@ -99,6 +99,10 @@
     <Compile Include="NegativeOverlay.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Config.cs" />
+    <Compile Include="SettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OverlayManager.cs">
