--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,10 @@ name: Build
 
 on:
   push:
-    branches: [ work, master ]
+    branches: [ work, master, main ]
   pull_request:
-    branches: [ work, master ]
+    branches: [ work, master, main ]
+  workflow_dispatch:
 
 jobs:
   build:
