--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,21 +2,43 @@ name: Build
 
 on:
   push:
-    branches: [ work, master ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ work, master ]
+    branches: [ main, master ]
 
 jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up MSBuild
-        uses: microsoft/setup-msbuild@v1.3
-      - name: Build solution
-        run: msbuild NegativeScreen.sln /p:Configuration=Release
-      - name: Upload build artifacts
+      - uses: actions/checkout@v3
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
+
+      - name: Restore
+        run: dotnet restore NegativeScreen/NegativeScreen.csproj
+
+
+      - name: Build x64 Release
+        run: dotnet build NegativeScreen/NegativeScreen.csproj -c Release -p:Platform=x64
+
+
+
+      - name: Build x86 Release
+        run: dotnet build NegativeScreen/NegativeScreen.csproj -c Release -p:Platform=x86
+
+
+
+      - name: Upload x64 EXE
         uses: actions/upload-artifact@v4
         with:
-          name: NegativeScreen
-          path: NegativeScreen/bin/Release/
+          name: NegativeScreen-x64
+          path: NegativeScreen/bin/x64/Release/net9.0-windows/NegativeScreen.exe
+
+      - name: Upload x86 EXE
+        uses: actions/upload-artifact@v4
+        with:
+          name: NegativeScreen-x86
+          path: NegativeScreen/bin/x86Release/net9.0-windows/NegativeScreen.exe
