--- a/NegativeScreen/NegativeScreen.csproj
+++ b/NegativeScreen/NegativeScreen.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuiltinMatrices.cs" />
@@ -100,8 +101,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="MonitorSelectionForm.cs" />
-    <Compile Include="WindowSelectionForm.cs" />
+    <Compile Include="SettingsForm.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OverlayManager.cs">
