--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ work, master, main ]
+    branches: [*]
   pull_request:
-    branches: [ work, master, main ]
+    branches: [*]
   workflow_dispatch:
 
 jobs:
